manifests/foam-processor-pod.yaml
# a pod to attach the PVC to test that it's working
---
apiVersion: v1
kind: Pod
metadata:
  name: foam-processor
  labels:
    app: foam-processor
spec:
  containers:
  - name: openfoam
    command: ["sleep","infinity"]
    image: quay.io/openshiftdemos/kubeflow-mpi-openfoam:latest
    volumeMounts:
    - mountPath: /home/openfoam/storage
      name: storage
    resources:
      limits:
        cpu: "1"
        memory: "1Gi"
      requests:
        cpu: "1"
  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: foam-tutorials-claim
